revert user labels / properties
